# dLLM_Reason

./: .gitattributes  .gitignore  LICENSE  README.md  REFERENCES.md  pyproject.toml  requirements.txt
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml  publish.yml
configs/: eval_default.yaml
configs/eval/: hotpotqa.yaml  humaneval.yaml  mbpp.yaml  mmlu.yaml
configs/experiment/: dag_aware_training.yaml  llada_dag_search.yaml  mdlm_gsm8k_baseline.yaml
configs/graph/: bidirectional.yaml  cot.yaml  empty.yaml  linear_chain.yaml  skeleton.yaml
configs/model/: d3pm.yaml  llada.yaml  mdlm.yaml  sedd.yaml
configs/search/: differentiable.yaml  evolutionary.yaml  greedy.yaml  rl_policy.yaml
configs/task/: arc.yaml  gsm8k.yaml  math.yaml  prontoqa.yaml
docs/: ABLATION_SETTINGS.md  API_REFERENCE.md  FEATURE_MANUAL.md  FEATURE_MANUAL.zh.md  REFERENCES.md  V1.0_RELEASE.md  dLLM_Reason_V1.0.pptx  dLLM_Reason_V1.2.3.pptx  deployment.md  generate_ppt.py  generate_ppt_v1.2.3.py  tutorial_eval_all_strategies.md
notebooks/: 01_dag_exploration.ipynb  02_results_analysis.ipynb
scripts/: add_feedback.py  add_feedback.sh  analyze_dag.py  analyze_dag.sh  benchmark_schedulers.py  benchmark_schedulers.sh  collect_episodes.py  collect_episodes.sh  download_all.py  download_datasets.py  download_datasets.sh  download_models.py  download_models.sh  eval_dags.py  eval_dags.sh  evaluate.py  evaluate.sh  generate_latex_table.py  generate_latex_table.sh  generate_templates.py  generate_templates.sh  infer_llada.py  infer_llada.sh  inspect_episodes.py  inspect_episodes.sh  learn_from_episodes.py  learn_from_episodes.sh  manage_library.py  manage_library.sh  merge_dags.py  merge_dags.sh  run_ablation.py  run_eval.sh  run_pipeline.py  run_pipeline.sh  run_research_pipeline.py  run_single_benchmark.sh  search_dag.py  search_dag.sh  search_dag_live.py  (+10 more)
scripts/runs/: all_strategies.sh  answer_first.sh  bidirectional.sh  confidence.sh  cot.sh  empty.sh  entropy.sh  example_pipeline.sh  full_comparison.sh  linear.sh  random.sh  save_outputs.sh  search_differentiable.sh  search_e2e.sh  search_evolutionary.sh  search_greedy.sh  search_nas.sh  search_rl.sh  semi_ar.sh  skeleton.sh
src/dllm_reason/: __init__.py  cli.py
src/dllm_reason/data/: collator.py  reasoning_datasets.py  tokenizer.py
src/dllm_reason/eval/: benchmarks.py  dag_analysis.py  metrics.py  reasoning_eval.py
src/dllm_reason/graph/: __init__.py  constraints.py  dag.py  span_dag.py  templates.py  viz.py
src/dllm_reason/inference/: __init__.py  dag_sampler.py  sampler.py
src/dllm_reason/models/: __init__.py  base.py  d3pm.py  llada.py  mdlm.py  sedd.py
src/dllm_reason/models/backbone/: __init__.py  transformer.py
src/dllm_reason/scheduler/: __init__.py  adaptive_dynamic_scheduler.py  base.py  confidence_scheduler.py  critical_token_scheduler.py  curriculum_scheduler.py  dag_scheduler.py  entropy_scheduler.py  linear_scheduler.py  maskgit_scheduler.py  random_scheduler.py  semi_ar_scheduler.py
src/dllm_reason/search/: __init__.py  base.py  differentiable.py  e2e_dag_learner.py  evolutionary.py  fitness.py  greedy.py  nas_search.py  rl_policy.py
src/dllm_reason/training/: dag_aware_train.py  finetune.py  pretrain.py  rl_train.py
src/dllm_reason/utils/: __init__.py  distributed.py  local_resolve.py  logging.py  registry.py  resource_registry.py
tests/: test_dag.py  test_library.py  test_models.py  test_schedulers.py
