[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dllm-reason"
version = "1.4.3"
description = "DAG-guided discrete diffusion language models for reasoning"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "BDeMo" }]
keywords = ["discrete diffusion", "language model", "reasoning", "DAG", "LLaDA"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "datasets>=2.16.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "wandb>=0.16.0",
    "accelerate>=0.25.0",
    "networkx>=3.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "einops>=0.7.0",
    "scipy>=1.11.0",
    "openpyxl>=3.1.0",
    "evaluate>=0.4.0",
]

[project.optional-dependencies]
library = [
    "faiss-cpu>=1.7.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]
serve = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "bitsandbytes>=0.41.0",
]

[project.scripts]
dllm-train            = "dllm_reason.cli:train"
dllm-eval             = "dllm_reason.cli:evaluate"
dllm-eval-dags        = "dllm_reason.cli:eval_dags"
dllm-search           = "dllm_reason.cli:search_dag"
dllm-viz              = "dllm_reason.cli:visualize_dag"
dllm-serve            = "dllm_reason.cli:serve"
dllm-webui            = "dllm_reason.cli:webui"
dllm-pipeline         = "dllm_reason.cli:run_pipeline"
dllm-collect          = "dllm_reason.cli:collect_episodes"
dllm-learn            = "dllm_reason.cli:learn_from_episodes"
dllm-library          = "dllm_reason.cli:manage_library"
dllm-bench-schedulers = "dllm_reason.cli:benchmark_schedulers"
dllm-analyze-dag      = "dllm_reason.cli:analyze_dag"
dllm-episodes         = "dllm_reason.cli:inspect_episodes"
dllm-templates        = "dllm_reason.cli:generate_templates"
dllm-feedback         = "dllm_reason.cli:add_feedback"
dllm-merge-dags       = "dllm_reason.cli:merge_dags"

[project.urls]
"Homepage" = "https://github.com/BDeMo/dLLM_Reason"
"Bug Tracker" = "https://github.com/BDeMo/dLLM_Reason/issues"
"Documentation" = "https://github.com/BDeMo/dLLM_Reason#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dllm_reason" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"
